# UnixShellWannabe

UnixShellWannabe/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp  shelpers.cpp  shelpers.hpp
UnixShellWannabe.xcodeproj/: project.pbxproj
UnixShellWannabe.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
UnixShellWannabe.xcodeproj/project.xcworkspace/xcuserdata/warnernielsen.xcuserdatad/: UserInterfaceState.xcuserstate
UnixShellWannabe.xcodeproj/xcshareddata/xcschemes/: UnixShellWannabe.xcscheme
UnixShellWannabe.xcodeproj/xcuserdata/warnernielsen.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
UnixShellWannabe.xcodeproj/xcuserdata/warnernielsen.xcuserdatad/xcschemes/: xcschememanagement.plist
